--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "1.0.10",
     "react-tap-event-plugin": "^2.0.1",
     "request": "^2.81.0",
+    "semantic-ui-react": "^0.71.4",
     "styled-components": "^2.1.1",
     "tesseract.js": "^1.0.10"
   },
