scaffold up the toolbar and mock the sign-up and login components

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,9 @@
 {
-    "extends": "standard",
     "plugins": [
-        "standard",
-        "promise"
+        "react"
+    ],
+    "extends": [
+        "eslint:all",
+        "plugin:react/all"
     ]
 }
