--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-eslint": "^7.2.3",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-react": "^7.2.1",
     "material-ui": "^0.18.6",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
