--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "material-ui": "^0.18.6",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
     "react-scripts": "1.0.10",
     "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.7.2",
     "request": "^2.81.0",
     "semantic-ui-react": "^0.71.4",
     "styled-components": "^2.1.1",
