--- a/package.json
+++ b/package.json
@@ -3,20 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.16.2",
-    "babel-eslint": "^7.2.3",
-    "eslint-plugin-node": "^5.2.1",
+    "@okta/okta-auth-js": "^1.13.0",
+    "@okta/okta-signin-widget": "^2.6.0",
+    "axios": "^0.18.0",
+    "babel-eslint": "^8.2.2",
+    "dotenv": "^6.0.0",
+    "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-react": "^7.7.0",
-    "material-ui": "^0.18.6",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
+    "material-ui": "^0.20.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-google-login": "^3.0.4",
     "react-redux": "^5.0.7",
-    "react-scripts": "1.0.10",
-    "react-tap-event-plugin": "^2.0.1",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "^1.1.1",
+    "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "request": "^2.83.0",
-    "semantic-ui-react": "^0.71.5",
-    "styled-components": "^2.4.0",
+    "semantic-ui-react": "^0.78.3",
+    "styled-components": "^3.1.6",
     "tesseract.js": "^1.0.10"
   },
   "scripts": {
@@ -28,7 +34,7 @@
   "proxy": "http://localhost:3001",
   "devDependencies": {
     "eslint": "^4.18.1",
-    "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard": "^11.0.0",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1"
   }
