--- a/package.json
+++ b/package.json
@@ -3,27 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@okta/okta-auth-js": "^1.13.0",
-    "@okta/okta-signin-widget": "^2.6.0",
     "axios": "^0.18.0",
-    "babel-eslint": "^8.2.2",
+    "babel-eslint": "^9.0.0",
     "dotenv": "^6.0.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-react": "^7.7.0",
-    "material-ui": "^0.20.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-google-login": "^3.0.4",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-react": "^7.11.1",
+    "material-ui": "^0.20.2",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-google-login": "^3.2.1",
     "react-redux": "^5.0.7",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "^1.1.1",
-    "react-tap-event-plugin": "^3.0.2",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
-    "request": "^2.83.0",
-    "semantic-ui-react": "^0.78.3",
-    "styled-components": "^3.1.6",
-    "tesseract.js": "^1.0.10"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^1.1.5",
+    "react-tap-event-plugin": "^3.0.3",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
+    "request": "^2.88.0",
+    "semantic-ui-react": "^0.82.3",
+    "socket.io-client": "^2.1.1",
+    "styled-components": "^3.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,9 +31,9 @@
   },
   "proxy": "http://localhost:3001",
   "devDependencies": {
-    "eslint": "^4.18.1",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-promise": "^3.6.0",
+    "eslint": "^5.5.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-standard": "^3.0.1"
   }
 }
